syntax = "proto3";

package protobuf;
option go_package = "../protobuf";
// protoc --proto_path . --go_out=./protobuf/protobuf/ --go-grpc_out=./protobuf/protobuf/ ./protobuf/*.proto

message LandlordsCreateRoomS {

}

message LandlordsCreateRoomC {
  int64 room_id = 1; // 房间id
}

message LandlordsJoinRoomS {
  int64 room_id = 1; // 房间id
}

message LandlordsJoinRoomC {
  int64 room_id = 1; // 房间id
  repeated string user_ids = 2; // 玩家id
  repeated string ready_user_ids = 3; // 已经准备的玩家
  map<string, int32> user_seat = 4; // 玩家座位
}

message LandlordsJoinRoomNotifyC {
  int64 room_id = 1;
  string user_id = 2;
}

message LandlordsLeaveRoomS {

}

message LandlordsLeaveRoomC {
  int64 room_id = 1;
}

message LandlordsLeaveRoomNotifyC {
  int64 room_id = 1;
  string user_id = 2;
}

message LandlordsStartGameS {
  int64 room_id = 1;
}

message LandlordsCallS {
  int64 room_id = 1;
}

message LandlordsPlayS {
  int64 room_id = 1;
  repeated Card cards = 2;
}

message Card {
  int64 guid = 1; // 唯一id
  int32 point = 2; // 点数
  int32 color = 3; // 花色
}